tests/samples/handoff-without-arguments.err
handoff-without-arguments.flow:3:Syntax error. "  handoff\n*done\n".
