tests/samples/handoff-without-arguments.flow
flow onboarding do
  handoff
done
